<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="begin_date">Begin date</string>

    <string name="hint_date">01/01/2000</string>
    <string name="sort_order">Sort order</string>
    <string name="art">Art</string>
    <string name="fashion_style">Fation &amp; Style</string>
    <string name="sports">Sports</string>
    <string name="save">Save</string>

    <string name="oldest">Oldest</string>
    <string name="newest">Newest</string>

    <string name="err_msg_internet_not_available">
        Internet is not available
    </string>
</resources>
