<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/default_margin"
    android:paddingTop="@dimen/default_padding"
    tools:context="com.hengstar.nytimessearch.fragments.FilterFragment"
    android:orientation="horizontal">

    <TextView
        style="@style/Label"
        android:id="@+id/tvBegindate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/begin_date"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etBeginDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBegindate"
        android:layout_centerHorizontal="true"
        android:focusableInTouchMode="false"
        android:ems="6"
        android:inputType="none"
        android:clickable="true"
        android:textAlignment="center"
        android:hint="@string/hint_date" />

    <TextView
        style="@style/Label"
        android:id="@+id/tvSortOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_order"
        android:textAlignment="center"
        android:layout_below="@+id/etBeginDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/default_margin" />

    <Spinner
        style="@style/Widget.AppCompat.DropDownItem.Spinner"
        android:id="@+id/spSortOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/sort_orders_array"
        android:prompt="@string/sort_order"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_below="@+id/tvSortOrder"
        android:layout_alignLeft="@+id/etBeginDate"
        android:layout_alignStart="@+id/etBeginDate" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:orientation="vertical"
        android:layout_below="@+id/spSortOrder"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">
        <CheckBox android:id="@+id/cbArt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/art" />

        <CheckBox
            android:id="@+id/cbFashionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/cbArt"
            android:text="@string/fashion_style" />

        <CheckBox android:id="@+id/cbSports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/cbArt"
            android:text="@string/sports" />
    </LinearLayout>

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/default_margin"
        android:onClick="onSaveFilter" />
</RelativeLayout>
